# LocalPass

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LESSONS.md  PRD.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecar.mjs
apps/desktop/src/: App.svelte  main.ts  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  daemon.rs  dotenv.rs  generate.rs  item_input.rs  lib.rs  main.rs  model.rs  safstore.rs  wordlist.rs
apps/desktop/src/components/: CameraScan.svelte  Devices.svelte  Generator.svelte  Help.svelte  ItemDetail.svelte  ItemForm.svelte  Onboarding.svelte  Security.svelte  Unlock.svelte  Vault.svelte
apps/desktop/src/lib/: api.ts  clipboard.ts  envset.test.ts  envset.ts  format.test.ts  format.ts  toast.ts  types.ts
apps/extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
crates/lp-cli/: Cargo.toml
crates/lp-cli/src/: cli.rs  content.rs  daemonctl.rs  dotenv.rs  envmap.rs  error.rs  generate.rs  main.rs  otpauth.rs  output.rs  profile.rs  reference.rs  resolve.rs  timestamp.rs  unlock.rs  wordlist.rs
crates/lp-cli/src/commands/: attach.rs  audit.rs  backup.rs  browser.rs  daemon.rs  device.rs  env.rs  export.rs  generate.rs  health.rs  import.rs  init.rs  item.rs  kit.rs  mod.rs  pairing.rs  password.rs  run.rs  search.rs  ssh.rs  status.rs  sync.rs  totp.rs  vault.rs
crates/lp-cli/tests/: attach.rs  audit.rs  backup_and_kit.rs  generate.rs  import_export.rs  lifecycle.rs  run_and_env.rs  ssh.rs  totp.rs  vault_and_password.rs
crates/lp-cli/tests/common/: mod.rs
crates/lp-crypto/: Cargo.toml
crates/lp-crypto/src/: envelope.rs  error.rs  hash.rs  kdf.rs  keys.rs  lib.rs  muk.rs  params.rs  seal.rs  secretkey.rs  sign.rs  symmetric.rs  totp.rs  wrap.rs
crates/lp-crypto/tests/: kdf_vectors.rs  proptests.rs  roundtrips.rs  tamper.rs
crates/lp-daemon/: Cargo.toml
crates/lp-daemon/src/: client.rs  engine.rs  error.rs  frame.rs  lib.rs  origin.rs  protocol.rs  render.rs  server.rs  spawn.rs  sync.rs
crates/lp-daemon/src/sshagent/: keys.rs  listener.rs  mod.rs  protocol.rs  service.rs
crates/lp-daemon/src/sshagent/listener/: unix.rs  windows.rs
crates/lp-daemon/src/transport/: mod.rs  unix.rs  windows.rs
crates/lp-daemon/tests/: attachment_oversize.rs  attachments.rs  audit_proxy.rs  create_account.rs  create_vault.rs  daemon_cli.rs  device_sync.rs  server_lifecycle.rs  ssh_agent.rs  totp_proxy.rs  transport_roundtrip.rs
crates/lp-native-host/: Cargo.toml
crates/lp-native-host/src/: bridge.rs  error.rs  framing.rs  host.rs  lib.rs  protocol.rs  register.rs  winreg.rs
crates/lp-native-host/tests/: host_daemon_e2e.rs
crates/lp-porter/: Cargo.toml
crates/lp-porter/src/: error.rs  lib.rs  model.rs
crates/lp-porter/src/export/: archive.rs  dotenv.rs  mod.rs  plaintext.rs
crates/lp-porter/src/import/: bitwarden.rs  csv_generic.rs  dotenv.rs  kdbx.rs  lastpass.rs  mod.rs  onepux.rs
crates/lp-porter/tests/: kdbx_import.rs
crates/lp-porter/tests/fixtures/kdbx/: ground_truth.json  sample_aes256.kdbx
crates/lp-sync/: Cargo.toml
crates/lp-sync/src/: announce.rs  engine.rs  error.rs  identity.rs  lib.rs  merge.rs  shipping.rs  store.rs  verify.rs  wire.rs
crates/lp-sync/tests/: convergence.rs  happens_before.rs  ingest_security.rs  roundtrip.rs  store_injection.rs  two_device.rs  two_device_attachments.rs
crates/lp-sync/tests/common/: mod.rs
crates/lp-vault/: Cargo.toml
crates/lp-vault/src/: aad.rs  account.rs  attachment.rs  audit.rs  backup.rs  canonical.rs  common_passwords.txt  db.rs  error.rs  foreign.rs  health.rs  ids.rs  index.rs  lib.rs  op.rs  payload.rs  vault.rs
crates/lp-vault/tests/: attachments.rs  audit.rs  backup_and_prune.rs  identity.rs  lifecycle.rs  opchain.rs  search_index.rs  security.rs
docs/: android.md  architecture.md  mvp-acceptance.md
docs/specs/: device-pairing.md  search-index.md  sync-protocol.md  vault-format.md
