[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "AGPL-3.0-only"
repository = "https://github.com/localpass/localpass"

[workspace.dependencies]
thiserror = "2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[profile.release]
lto = "thin"
strip = "symbols"
