[package]
name = "lp-cli"
description = "LocalPass command-line interface (the `localpass` binary): account init, vault and item CRUD, generation, and password change — a fully local, direct-unlock CLI (no daemon yet)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "localpass"
path = "src/main.rs"

[dependencies]
# --- The storage/crypto core we drive. lp-cli holds NO crypto primitives; it
# --- unlocks through lp-vault and only handles the SecretKey display string via
# --- lp-crypto's high-level SecretKey type (crypto-boundary rule, LESSONS.md). ---
lp-vault = { path = "../lp-vault" }
lp-crypto = { path = "../lp-crypto" }
# --- The daemon library: the CLI is a daemon CLIENT (probe/proxy) and the
# --- launcher for `daemon start`. It never links the server loop into itself; it
# --- spawns the separate `localpass-daemon` binary. Shares the wire protocol and
# --- item-render model so proxied output matches direct-unlock output. ---
lp-daemon = { path = "../lp-daemon" }
# --- Import/export logic. The porter parses foreign exports into ItemPayloads
# --- (which this CLI then creates in a vault) and writes/reads the age archive.
# --- The CLI owns storage + prompting; the porter is pure format I/O. ---
lp-porter = { path = "../lp-porter" }
# --- The sync engine: file-based log shipping, ingest verification, and the
# --- deterministic merge. The CLI drives its setup/push/pull/status + device
# --- pairing surface; lp-sync owns the protocol, the CLI owns prompting + I/O. ---
lp-sync = { path = "../lp-sync" }
# --- Argument parsing. clap v4 derive gives a typed command tree, generated
# --- --help, and stable long-flag names — the documented CLI contract (PRD §4.4). ---
clap = { version = "4", features = ["derive"] }
# --- Hidden password prompts read straight from the TTY (never echoed, never in
# --- argv). The only supported interactive secret-entry path (PRD §4.4 UX rules). ---
rpassword = "7"
# --- Platform data dir resolution for the default --profile
# --- (%APPDATA%/localpass, ~/.local/share/localpass, ~/Library/...). ---
directories = "5"
# --- Binary-only error context. anyhow is used ONLY in the CLI (never in a
# --- library crate): it lets each command attach a one-line human message that
# --- we render to stderr, mapping to the documented exit codes. ---
anyhow = "1"
# --- Stable, documented --json output. Also parses `key=value` field flags into
# --- typed payload values via serde_json::Value. ---
serde_json = "1"
# --- Generation randomness ONLY. This is the same OS CSPRNG lp-crypto uses
# --- (getrandom → OsRng, PRD §5.2); permitted here for password/passphrase
# --- generation because no key-hierarchy secret is involved. NOT used for any
# --- key material — that always comes from lp-crypto. ---
getrandom = "0.3"
# --- Parse hyphenated UUID strings back into lp-vault ids (item/vault lookup by
# --- id). lp-vault re-exports Id but not a string parser, so we parse the
# --- canonical hyphenated form ourselves. Same crate/version lp-vault pins. ---
uuid = { version = "1", features = ["v7"] }
# --- Drop-zeroed containers for the age-archive passphrase, handled like a
# --- master password (prompted twice / stdin, zeroized) before it crosses into
# --- lp-porter (workspace-pinned). ---
zeroize = { workspace = true }

[dev-dependencies]
# --- Black-box CLI integration tests: spawn the built `localpass` binary,
# --- assert on exit codes and stdout/stderr (assert_cmd + predicates), each in
# --- its own tempdir profile with LOCALPASS_PASSWORD (tempfile). ---
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# --- Parse `--json` output in the ssh command integration test. ---
serde_json = "1"
# --- Authoring a .1pux fixture (a ZIP holding export.data) inline in the
# --- import integration test. Same crate/features lp-porter uses. ---
zip = { version = "8", default-features = false, features = ["deflate"] }
