[package]
publish = false  # application crate; uses path deps, not published to crates.io
name = "lp-porter"
description = "LocalPass import/export: parse foreign password-manager exports into LocalPass items, and write the age-encrypted recoverable archive (PRD §4.6 / §6.9)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# --- The item model we import INTO and export FROM. lp-porter builds
# --- `lp_vault::ItemPayload` values; the CLI persists them. We consume only
# --- lp-vault's public payload model, never its storage internals. ---
lp-vault = { path = "../lp-vault" }
# --- FOREIGN-FORMAT crypto exception (documented in lib.rs): `age` reads/writes
# --- the standalone-age archive format — an external standard, not LocalPass's
# --- own envelope crypto (which stays in lp-crypto). The `armor` feature is off:
# --- we emit the binary age format, whose header magic is exactly what the
# --- `age` CLI expects, keeping the archive small. ---
age = { version = "0.11", default-features = false }
# --- ZIP reader for the 1Password .1pux container (a ZIP holding export.data).
# --- default-features off + only `deflate`: 1PUX uses store/deflate, so we skip
# --- bzip2/zstd/lzma/aes C-and-Rust deps and keep the tree lean. ---
zip = { version = "8", default-features = false, features = ["deflate"] }
# --- LastPass and generic CSV parsing/writing (RFC 4180, quoting, embedded
# --- newlines). Hand-rolling CSV quote handling is a footgun; `csv` is the
# --- standard, well-fuzzed choice. ---
csv = "1"
# --- tar container for the age archive body: a documented, ubiquitous format so
# --- `age -d | tar -x` round-trips outside LocalPass (PRD §6.9 exit hatch). ---
tar = "0.4"
# --- serde model for the archive JSON and for parsing 1PUX / Bitwarden JSON.
# --- serde_json's untyped `Value` lets us tolerate unknown/extra foreign fields
# --- without a brittle exhaustive schema. ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- KDBX 4 import (KeePass) — FOREIGN-FORMAT crypto exception, same rationale
# --- as `age` above: these RustCrypto primitives READ a foreign database's
# --- envelope; they are NEVER used for LocalPass's own vault crypto (that stays
# --- in lp-crypto). Versions are deliberately pinned to the lines lp-crypto
# --- already resolves (cipher 0.4 for aes/cbc/chacha20; argon2 0.5; the
# --- digest-0.10 line for sha2/hmac) so no parallel crypto stack is introduced.
# aes-256-cbc is the KDBX4 default outer cipher; chacha20 is the (mandatory)
# inner protected-field stream. ---
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
chacha20 = "0.9"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
sha2 = "0.10"
hmac = { version = "0.12", default-features = false }
# --- GZip inflate for the KDBX4 inner payload. `flate2`'s default `miniz_oxide`
# --- backend is pure Rust (no C zlib), keeping the build toolchain-free. ---
flate2 = "1"
# --- Pull-parser for the KDBX inner XML. Machine-generated but entity/UTF-8
# --- bearing (titles like `Café ☕ / <b>`); hand-rolling XML entity decode is a
# --- footgun, so use the standard well-fuzzed reader. ---
quick-xml = "0.41"
# --- Base64 decode for protected `<Value>` bodies (reuse lp-crypto's encoder). ---
data-encoding = "2"
# --- One error enum; no secret ever appears in a message (workspace-pinned). ---
thiserror = { workspace = true }
# --- Drop-zeroed containers for the age passphrase and any transient plaintext
# --- we hold while building the archive (workspace-pinned). ---
zeroize = { workspace = true }

[dev-dependencies]
# --- Isolated temp dirs / files for round-trip and malformed-input tests. ---
tempfile = "3"
